# sdf-text-view

./: .gitignore  Cargo.toml  README.MD  build.rs  rustfmt.toml
GPU-Frame-Caputre/GPU-Frame-Caputre.xcodeproj/: project.pbxproj
GPU-Frame-Caputre/GPU-Frame-Caputre.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
GPU-Frame-Caputre/GPU-Frame-Caputre.xcodeproj/project.xcworkspace/xcuserdata/grenlight.xcuserdatad/: UserInterfaceState.xcuserstate
GPU-Frame-Caputre/GPU-Frame-Caputre.xcodeproj/xcshareddata/xcschemes/: GPU-Frame-Caputre.xcscheme
docs/: idroid-rs(2018).MD
examples/: sdf.rs
examples/demo/: main.rs
iOS/: Podfile  README.MD
iOS/brush/: AppDelegate.swift  MetalController.swift  MetalView.swift  brush-Bridging-Header.h  idroid.h  rs_glue.h
iOS/brush.xcodeproj/: project.pbxproj
iOS/brush.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOS/brush.xcodeproj/xcshareddata/xcschemes/: brush.xcscheme
iOS/brush.xcodeproj/xcuserdata/grenlight.xcuserdatad/xcschemes/: xcschememanagement.plist
iOS/demo/: AppDelegate.swift  MetalController.swift  MetalView.swift  ViewController.swift  callback_from_rust.swift  idroid.h  rs_glue.h
iOS/demo.xcodeproj/: project.pbxproj
iOS/demo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOS/demo.xcodeproj/xcshareddata/xcschemes/: brush.xcscheme
iOS/demo/Base.lproj/: Main.storyboard
screenshot/: mac.mov
sdf-cpu/: Cargo.toml
sdf-cpu/src/: sdf.rs
sdf-generator/: Cargo.toml
sdf-generator/src/: main.rs  sdf.rs  sdf2.rs
shader/: clear_color.fs.glsl  common.vs.glsl  cube.fs.glsl  cube.vs.glsl  ink.fs.glsl  ink.vs.glsl  none.fs.glsl  page_turning.fs.glsl  page_turning.vs.glsl  roll.fs.glsl  roll.vs.glsl
shader-gen/: brush_bristle_fs.spv  brush_brush_fs.spv  brush_brush_vs.spv  brush_empty_canvas_fs.spv  brush_empty_canvas_vs.spv  brush_line_fs.spv  brush_line_vs.spv  brush_present_filter_fs.spv  clear_color_fs.spv  filter_gaussian_blur_fs.spv  filter_gray_comp.spv  fluid2_particle_init_comp.spv  fluid2_particle_rendering_fs.spv  fluid2_particle_rendering_vs.spv  fluid2_poiseuille_collide_comp.spv  fluid2_poiseuille_particle_comp.spv  fluid2_poiseuille_propagate_comp.spv  node_f32_buffer_present_fs.spv  node_f32_tex_present_fs.spv  node_point_fs.spv  node_point_vs.spv  none_fs.spv  none_vs.spv  page_turning_fs.spv  page_turning_vs.spv  procedual_brick_fs.spv  roll_fs.spv  roll_vs.spv  sdf_sdf_comp.spv  sdf_text_fs.spv
shader-preprocessed-wgsl/: clear_color.wgsl  sdf_sdf.wgsl  sdf_sdf_x.wgsl  sdf_sdf_y.wgsl  text.wgsl
shader-spirv/: none_fs.spv  sdf_sdf_x_comp.spv  sdf_sdf_y_comp.spv
shader-wgsl/: clear_color.wgsl  text.wgsl
shader-wgsl/filter/: gaussian_blur_r.comp.glsl  luminance.comp.glsl  non_maximum_suppression.comp.glsl  sobel_edge_detection.comp.glsl  weak_pixel_inclusion.comp.glsl
shader-wgsl/func/: bilinear_interpolation.glsl  color_space_convert.glsl  vs_micros.glsl
shader-wgsl/node/: f32_buffer_present.fs.glsl
shader-wgsl/sdf/: layout_and_fn.wgsl  sdf.wgsl  sdf_x.wgsl  sdf_y.wgsl  text.wgsl
shader/Zen Brush Shaders/: bg.fsh
shader/Zen Brush Shaders/bundle_inner/: fluid2ink.fsh  fluid2ink.vsh  fluidBlur.fsh  fluidBlur.vsh  fluidDry.fsh  fluidDry.vsh  guide.fsh  inkTint.fsh  inkTint.vsh  particle.fsh  particle.vsh  simple.fsh  simple.vsh  simpleColor.fsh  simpleColor.vsh  vertColor.vsh  wave.fsh  wave.vsh
shader/brush/: bristle.fs.glsl  brush.fs.glsl  brush.vs.glsl  empty_canvas.fs.glsl  line.fs.glsl  line.vs.glsl  present_filter.fs.glsl  shadertoy0.vs.glsl
shader/filter/: gaussian_blur.fs.glsl  gaussian_blur_r.comp.glsl  gray.comp.glsl  luminance.comp.glsl  non_maximum_suppression.comp.glsl  sobel_edge_detection.comp.glsl  weak_pixel_inclusion.comp.glsl
shader/fluid/: particle_init.comp  particle_rendering.vs  poiseuille_collide.comp  poiseuille_init.comp  poiseuille_particle.comp  poiseuille_propagate.comp
shader/fluid2/: density.fs.glsl  density.vs.glsl  json.txt  particle_rendering.fs.glsl  particle_rendering.vs.glsl  poiseuille_collide.comp.glsl  poiseuille_particle.comp.glsl  poiseuille_propagate.comp.glsl
shader/fractal/: hilbert.fs.glsl  hilbert.vs.glsl  mandelbrot.fs.glsl
shader/func/: fluid.glsl  fs_micros.glsl
shader/node/: f32_tex_present.fs.glsl  point.fs.glsl  point.vs.glsl
shader/procedual/: brick.fs.glsl  brick_bump.fs.glsl
shader/sdf/: sdf.comp.glsl  sdf_init.comp.glsl  sdf_layout_and_fn.glsl  sdf_x.comp.glsl  sdf_y.comp.glsl  text.fs.glsl
shader/transform/: ink_update_position.fs.glsl  ink_update_position.vs.glsl  invisible_ink.fs.glsl  invisible_ink2.vs.glsl
shell/: android.sh  android_debug.sh  build.sh  example_basic.sh  example_noise.sh  ios.sh  wasm_release.sh
src/: clear_node.rs  compute_node.rs  cube_example.rs  depth_stencil.rs  framework.rs  lib.rs  main.rs  matrix_helper.rs  page_turning.rs  render_node.rs  roll_animation.rs  sdf_text_view.rs  shader.rs  surface_view.rs  texture.rs  vertex.rs  view.rs
src/brush/: brush_data.rs  brush_view.rs  curve.rs  endpoint_cal.rs  ink_deposite.rs  line_antialiasing.rs  mod.rs  paper_node.rs  stroke_cal.rs
src/filter/: canny_edge_detection.rs  gaussian_blur.rs  luminance_filter.rs  mod.rs  non_maximum_suppression.rs  one_in_one_out.rs  sobel_edge_detection.rs
src/filters/: blur_filter.rs  gray_filter.rs  mod.rs
src/fluid/: mod.rs  particle.rs  poiseuille_flow.rs
src/fluid2/: density.rs  mod.rs  particle.rs  poiseuille_flow.rs
src/fractal/: mandelbrot.rs  mod.rs
src/geometry/: box_geometry.rs  hilbert_curve.rs  line.rs  mod.rs  plane.rs  tiled_sprites.rs
src/math/: line_segment.rs  mod.rs  position.rs  rect.rs  view_size.rs
src/node/: f32_buffer_node.rs  f32_tex_node.rs  mod.rs  none_node.rs  point_node.rs
src/procedure_texture/: brick.rs  mod.rs
src/sdf/: clear_node.rs  compute_node.rs  mod.rs  render_node.rs  sdf_render_node.rs  sdf_text_view.rs
src/utils/: depth_stencil.rs  gaussian.rs  hud.rs  matrix_helper.rs  mod.rs
uni-view/: Cargo.toml
uni-view/src/: ios_fs.rs  ios_view.rs  lib.rs  mac_fs.rs  mac_view.rs
uni-view/src/ffi/: mod.rs  strings.rs
(+2 files in other folders)
