[package]
name = "sdf-text-view"
version = "0.3.0"
authors = ["li jinlei <grenlight@icloud.com>"]
edition = "2018"

[lib]
crate-type = ["rlib", "staticlib"]
# [target.'cfg(target_os = "android")'.lib]
# crate-type = ["cdylib"]

[features]
default = []

[dependencies]
libc = "*"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", version = "0.7",  rev = "048551cba3419c50937192a85fb716c03c0ebf4b" }
# wgpu = { path = "../../wgpu-rs" }
uni-view = { path="../idroid/uni-view" }
idroid = { path="../idroid/idroid" }
# uni-view = { git = "https://github.com/grenlight/idroid", rev = "71ea76387f0491d0a2ea58caf106c6c3f124b2eb" }
# idroid = { git = "https://github.com/grenlight/idroid", rev = "71ea76387f0491d0a2ea58caf106c6c3f124b2eb" }

nalgebra-glm = "*"
image = "0.23"
lazy_static = "*"
zerocopy = "0.4"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
shaderc = "0.7"
objc = "*"
winit = { version = "0.24", features = ["web-sys"] }
raw-window-handle = "0.3"

[build-dependencies]
shaderc = "0.7"

[dev-dependencies]
lazy_static = "*"
palette = "0.4"
rand = "0.6"

# [patch.crates-io]
# # fixed bug: https://github.com/gfx-rs/gfx/issues/3086
# gfx-backend-metal = { git = "https://github.com/gfx-rs/gfx", rev = "8bd4f0d1f8ccc3875183ccb4b621023edb0ed94a" }
# gfx-hal = { git = "https://github.com/gfx-rs/gfx",  rev = "8bd4f0d1f8ccc3875183ccb4b621023edb0ed94a"}
