[package]
name = "sdf-text-view"
version = "0.3.0"
authors = ["li jinlei <grenlight@icloud.com>"]
edition = "2018"

[lib]
crate-type = ["rlib", "staticlib"]
# [target.'cfg(target_os = "android")'.lib]
# crate-type = ["cdylib"]

[features]
default = []

[dependencies]
libc = "*"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", version = "0.8",  rev = "9e4c98ccbe4e980f75a20cd00450a60ef361c16e" }
# wgpu = { path = "../../wgpu-rs" }
uni-view = { path="../idroid/uni-view" }
idroid = { path="../idroid/idroid" }
# uni-view = { git = "https://github.com/grenlight/idroid", rev = "0cdf9f5000c0e4512bd55a4d40876ec65726b9b8" }
# idroid = { git = "https://github.com/grenlight/idroid", rev = "0cdf9f5000c0e4512bd55a4d40876ec65726b9b8" }

nalgebra-glm = "*"
image = "0.23"
lazy_static = "*"
zerocopy = "0.4"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
shaderc = "0.7"
objc = "*"
winit = { version = "0.24", features = ["web-sys"] }
raw-window-handle = "0.3"

[dev-dependencies]
lazy_static = "*"
palette = "0.4"
rand = "0.6"

# fixed issue: https://github.com/gfx-rs/naga/issues/795 , waiting for 'gfx-24'
[patch."https://github.com/gfx-rs/naga"]
naga = {git = "https://github.com/grenlight/naga", rev = "fd561da44cb3fdbe770dc2350cc7118a48a5dc3c"}
