[package]
name = "sdf-text-view"
version = "0.3.0"
authors = ["li jinlei <grenlight@icloud.com>"]
edition = "2018"

[lib]
crate-type = ["rlib", "staticlib"]
# [target.'cfg(target_os = "android")'.lib]
# crate-type = ["cdylib"]

[features]
default = []

[dependencies]
libc = "*"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", version = "0.8",  rev = "9e4c98ccbe4e980f75a20cd00450a60ef361c16e" }
# uni-view = { path="../idroid/uni-view" }
# idroid = { path="../idroid/idroid" }
uni-view = { git = "https://github.com/grenlight/idroid", rev = "305c125e6eecaea8d35b04217c20cf1166fd2677" }
idroid = { git = "https://github.com/grenlight/idroid", rev = "305c125e6eecaea8d35b04217c20cf1166fd2677" }

nalgebra-glm = "*"
image = "0.23"
lazy_static = "*"
zerocopy = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.2"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
objc = "*"
winit = { version = "0.24", features = ["web-sys"] }
raw-window-handle = "0.3"

[dev-dependencies]
lazy_static = "*"
palette = "0.4"
rand = "0.6"

# fixed issue: https://github.com/gfx-rs/naga/issues/795 , waiting for 'gfx-24'
[patch."https://github.com/gfx-rs/naga"]
naga = {git = "https://github.com/grenlight/naga", rev = "fd561da44cb3fdbe770dc2350cc7118a48a5dc3c"}
