[package]
name = "uni-view"
version = "0.1.0"
authors = ["Li Jinlei <grenlight@icloud.com>"]


[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", rev = "da6377acc785ece9d9a57c9edfac4391ec5df6cf" }
# wgpu = { path = "../../wgpu-rs"}
libc = "*"
lazy_static = "*"

[target.wasm32-unknown-emscripten.dependencies]
stdweb =  "*"

[target.'cfg(target_os = "macos")'.dependencies]
winit = "*"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "*"
objc-foundation = "*"
core-graphics = "*"

[target.'cfg(target_os = "android")'.dependencies]
log = "*"