[package]
name = "uni-view"
version = "0.1.0"
authors = ["Li Jinlei <grenlight@icloud.com>"]


[dependencies]
libc = "*"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", rev = "433ab156eaa6964e0037cb5202be4dd82790422a"  }
# 本地版本设置了 metal-auto-capture，且解决了 iOS 设备上 Undefined symbols for architecture arm64:
#  "_MTLCopyAllDevices" bug
# wgpu = { path = "../wgpu-rs"}
lazy_static = "*"

[target.'cfg(target_os = "macos")'.dependencies]
winit = "0.20.0-alpha3"
raw-window-handle = "0.1"

[target.wasm32-unknown-emscripten.dependencies]
stdweb =  "*"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "*"
objc-foundation = "*"
core-graphics = "*"

[target.'cfg(target_os = "android")'.dependencies]
log = "*"

# [patch.crates-io]
# # winit =  { git = "https://github.com/rust-windowing/winit.git", rev = "31110be3960bb97caeacdd0a8cbad292722f94f1" }
# wgpu-native = { path = "../../wgpu/wgpu-native"}
